Font color becomes a little more black.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -58,7 +58,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 130%;
-  color: #02123d;
+  color: #1f2328;
 }
 
 ul {
