Font color becomes a little more black.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -28,8 +28,7 @@
   display: inline-block;
   padding: 4px 12px 3px 12px;
   font-size: 11px;
-  color:#395582;
-  fill:#395582;
+  color:#25292e;
   text-align: center;
   cursor: pointer;
   border: 1px solid #cccccc;
