--- a/public/css/common.css
+++ b/public/css/common.css
@@ -363,7 +363,8 @@ a.wiki-btn-history:hover {
 
 .tree-description {
   font-size:16px;
-  padding-top:5px;
+  padding-top:3px;
+  padding-bottom:8px;
   color:#112;
   font-weight:normal;
 }
@@ -2217,7 +2218,7 @@ a:hover .btn-delete {
 
 .project-header {
   background:#f7f9f9;
-  border-bottom: none;
+  border-bottom: 1px solid #D8D8D8;
   margin-bottom:12px;
   overflow:hidden;
 }
