--- a/public/css/common.css
+++ b/public/css/common.css
@@ -53,7 +53,7 @@
   cursor: default;
 }
 
-body {
+body, pre {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 130%;
