Adjust icon mergin.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1664,6 +1664,7 @@ input[type=text], input[type=password] {
 }
 .icon-on-baseline {
   vertical-align: -2px;
+  margin-right:1px;
 }
 
 .btn-small .icon {
