--- a/public/css/common.css
+++ b/public/css/common.css
@@ -29,6 +29,7 @@
   padding: 4px 12px 3px 12px;
   font-size: 11px;
   color:#25292e;
+  fill:#25292e;
   text-align: center;
   cursor: pointer;
   border: 1px solid #cccccc;
