pre font-family becomes monospace.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -54,9 +54,16 @@
   cursor: default;
 }
 
-body, pre {
+body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
+  line-height: 130%;
+  color: #1f2328;
+}
+
+pre {
+  font-family: monospace;
+  font-size: 13px;
   line-height: 130%;
   color: #1f2328;
 }
